@@ -347,6 +347,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Graphics\run_icon.png" />
+    <Content Include="BUGS" />
+    <Content Include="CHANGELOG" />
+    <Content Include="TODO" />
     <Content Include="TSL Examples\_CustomFunctions\Example02_BasicFunctionsUsage.tslf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -391,15 +394,6 @@
     <Folder Include="SymbolicCalculations\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CHANGELOG">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="BUGS">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TODO">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Data\functions.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
