@@ -6,8 +6,8 @@ var k = matrix({{1.2, 2.3, 3.1},
 				{1.1, 2.5, 3.7},
 				{1.9, 2.4, 3.1}});
 
-show(m);
-show(k);
+writeln(m);
+writeln(k);
 
 real r = 3.97/RiccatiBesselχ(2,1.5);
 
@@ -18,22 +18,22 @@ complex cc = cb/(2+i);
 for(var j=0;j<10;j++)
 	r+=PI·e+ψⁿ(j,r);
 
-show(m·k·r);
+writeln(m·k·r);
 
 
-var A = matrix({{1, 2},
+var A = matrix({{i, 2},
 				{3, 4},
 				{5, 6}});
 
 var B = matrix({{1, 2, 3},
-				{4, 5, 6}});
+				{4, 5·i, 6}});
 
-show(A);
-show(B);
-show(A·B);
-show(B·A);
-show(det(B·A));
-show(pow(B·A,2));
+writeln(A);
+writeln(B);
+writeln(A·B);
+writeln(B·A);
+writeln(det(B·A));
+writeln(pow(B·A,2));
 
 var str="string here";
 
@@ -45,7 +45,7 @@ while(n>0)
 	sum+=n·10;
 	n--;
 }
-show(sum);
+writeln(sum);
 
 
 var A2 = matrix({{1, 2},
@@ -55,8 +55,8 @@ var A2 = matrix({{1, 2},
 var B2 = matrix({{1, 2, 3},
 				{4, 5, 6}});
 
-show(A2ᵀ);
-show(B2ᵀ);
+writeln(A2ᵀ);
+writeln(B2ᵀ);
 
 var A3 = matrix({{3, 4},
 				 {5, 6}});
@@ -64,6 +64,6 @@ var A3 = matrix({{3, 4},
 var B3 = matrix({{1, 2},
 				 {4, 5}});
 
-write(inv(A3)·A3);
+writeln(inv(A3)·A3);
 writeln("\n");
 writeln(KroneckerProduct(A3,B3));
